--- a/index.html
+++ b/index.html
@@ -304,21 +304,24 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
   const VOTE_KEY = "revelabet_voted_1x2";
 
   const SUPABASE_URL = "https://menjfaztfkabogifyhua.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1lbmpmYXp0ZmthYm9naWZ5aHVhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkxOTI2NzgsImV4cCI6MjA4NDc2ODY3OH0.SHfs6NnIiNOVCBeXyxcN-tO9hfUCvuY68H_vKwuW7tQ";
+  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1lbmpmYXp0ZmthYm9naWZ5aHVhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkxOTI2NzgsImV4cCI6MjA4NDc2ODY3OH0.SHfs6NnIiNOVCBeXyxcN-tO9hfUCvuY68H_vKwuW7tQ"; // SUA SUPABASE ANON KEY
+
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
   let marketOpen = true;
 
+  // Função para mostrar o status de "Ao Vivo"
   function setLive(text, open) {
     $("liveTxt").textContent = text;
     const color = open ? "rgba(34,197,94,.95)" : "rgba(245,158,11,.95)";
     const glow  = open ? "rgba(34,197,94,.12)" : "rgba(245,158,11,.12)";
-    ["dot","sDot"].forEach(id=>{
+    ["dot","sDot"].forEach(id => {
       $(id).style.background = color;
       $(id).style.boxShadow = `0 0 0 3px ${glow}`;
     });
   }
 
+  // Função para atualizar o estado do mercado
   function render(state) {
     marketOpen = state.marketOpen;
 
@@ -335,7 +338,7 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
     $("sumProb").textContent  = state.sumProb.toFixed(2);
 
     const voted = localStorage.getItem(VOTE_KEY) === "1";
-    ["bet1","betx","bet2"].forEach(id=>{
+    ["bet1", "betx", "bet2"].forEach(id => {
       $(id).disabled = voted || !marketOpen;
     });
 
@@ -351,6 +354,7 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
     }
   }
 
+  // Função para carregar o estado atual do mercado
   async function loadMarket() {
     try {
       const { data, error } = await supabase
@@ -366,11 +370,12 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
     }
   }
 
+  // Função para enviar o voto para a function no Supabase
   async function vote(pick) {
     if (localStorage.getItem(VOTE_KEY)) return;
 
     try {
-      const res = await fetch("/api/vote", {
+      const res = await fetch("https://menjfaztfkabogifyhua.functions.supabase.co/vote", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ pick })
@@ -385,22 +390,24 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
     }
   }
 
+  // Funções para os botões de voto
   $("bet1").onclick = () => vote("1");
   $("betx").onclick = () => vote("x");
   $("bet2").onclick = () => vote("2");
 
+  // Carregar o estado inicial do mercado
   loadMarket();
 
-  // Supabase Realtime
+  // Configuração do Realtime com Supabase para atualizações em tempo real
   supabase
     .channel("public:market_state")
     .on("postgres_changes", { event: "UPDATE", schema: "public", table: "market_state" },
       (payload) => render(payload.new)
     )
     .subscribe();
-
 })();
 </script>
+
 
 </body>
 </html>
