--- a/index.html
+++ b/index.html
@@ -375,31 +375,33 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
     }
   }
 
-  async function vote(pick) {
-    if (localStorage.getItem(VOTE_KEY)) return;
+ async function vote(pick) {
+  if (localStorage.getItem(VOTE_KEY)) return;
 
-    try {
-      const res = await fetch(EDGE_FUNCTION_URL, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "apikey": SUPABASE_ANON_KEY
-        },
-        body: JSON.stringify({ pick })
-      });
+  try {
+    const res = await fetch(EDGE_FUNCTION_URL, {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        "apikey": SUPABASE_ANON_KEY,
+        "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
+      },
+      body: JSON.stringify({ pick })
+    });
 
-      if (!res.ok) {
-        const t = await res.text();
-        throw new Error(t);
-      }
-
-      localStorage.setItem(VOTE_KEY, "1");
-      $("statusTxt").textContent = "✅ Voto registrado!";
-    } catch (err) {
-      console.error(err);
-      $("statusTxt").textContent = "❌ Erro ao votar.";
+    if (!res.ok) {
+      const t = await res.text();
+      throw new Error(t);
     }
+
+    localStorage.setItem(VOTE_KEY, "1");
+    $("statusTxt").textContent = "✅ Voto registrado!";
+  } catch (err) {
+    console.error(err);
+    $("statusTxt").textContent = "❌ Erro ao votar.";
   }
+}
+
 
   $("bet1").onclick = () => vote("1");
   $("betx").onclick = () => vote("x");
