--- a/index.html
+++ b/index.html
@@ -302,20 +302,14 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
 (() => {
   const $ = (id) => document.getElementById(id);
   const VOTE_KEY = "revelabet_voted_1x2";
-
- 
   const SUPABASE_URL = "https://menjfaztfkabogifyhua.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1lbmpmYXp0ZmthYm9naWZ5aHVhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkxOTI2NzgsImV4cCI6MjA4NDc2ODY3OH0.SHfs6NnIiNOVCBeXyxcN-tO9hfUCvuY68H_vKwuW7tQ";
-
- 
-  const EDGE_FUNCTION_URL =
-    "https://menjfaztfkabogifyhua.supabase.co/functions/v1/super-processor";
+  const SUPABASE_ANON_KEY =
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1lbmpmYXp0ZmthYm9naWZ5aHVhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkxOTI2NzgsImV4cCI6MjA4NDc2ODY3OH0.SHfs6NnIiNOVCBeXyxcN-tO9hfUCvuY68H_vKwuW7tQ";
 
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
   let marketOpen = true;
-
-
+  
   function setLive(text, open) {
     $("liveTxt").textContent = text;
     const color = open ? "rgba(34,197,94,.95)" : "rgba(245,158,11,.95)";
@@ -327,19 +321,19 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
   }
 
   function render(state) {
-    marketOpen = state.marketOpen;
+    marketOpen = state.market_open ?? state.marketOpen;
 
     $("v1").textContent = state.menino;
     $("vx").textContent = state.empate;
     $("v2").textContent = state.menina;
 
-    $("o1").textContent = state.o1.toFixed(2);
-    $("ox").textContent = state.ox.toFixed(2);
-    $("o2").textContent = state.o2.toFixed(2);
+    $("o1").textContent = Number(state.o1).toFixed(2);
+    $("ox").textContent = Number(state.ox).toFixed(2);
+    $("o2").textContent = Number(state.o2).toFixed(2);
 
     $("juiceTxt").textContent = state.juice;
-    $("ovrTxt").textContent   = state.overround.toFixed(2);
-    $("sumProb").textContent  = state.sumProb.toFixed(2);
+    $("ovrTxt").textContent   = Number(state.overround).toFixed(2);
+    $("sumProb").textContent  = Number(state.sum_prob ?? state.sumProb).toFixed(2);
 
     const voted = localStorage.getItem(VOTE_KEY) === "1";
     ["bet1", "betx", "bet2"].forEach(id => {
@@ -375,39 +369,38 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
     }
   }
 
- async function vote(pick) {
-  if (localStorage.getItem(VOTE_KEY)) return;
+  async function vote(pick) {
+    if (localStorage.getItem(VOTE_KEY)) return;
 
-  try {
-    const res = await fetch(EDGE_FUNCTION_URL, {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        "apikey": SUPABASE_ANON_KEY,
-        "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
-      },
-      body: JSON.stringify({ pick })
-    });
+    try {
+      const { data, error } = await supabase.functions.invoke(
+        "super-processor",
+        {
+          body: { pick }
+        }
+      );
 
-    if (!res.ok) {
-      const t = await res.text();
-      throw new Error(t);
+      if (error) {
+        console.error(error);
+        throw error;
+      }
+
+      localStorage.setItem(VOTE_KEY, "1");
+      $("statusTxt").textContent = "✅ Voto registrado!";
+    } catch (err) {
+      console.error(err);
+      $("statusTxt").textContent = "❌ Erro ao votar.";
     }
-
-    localStorage.setItem(VOTE_KEY, "1");
-    $("statusTxt").textContent = "✅ Voto registrado!";
-  } catch (err) {
-    console.error(err);
-    $("statusTxt").textContent = "❌ Erro ao votar.";
   }
-}
 
 
   $("bet1").onclick = () => vote("1");
   $("betx").onclick = () => vote("x");
   $("bet2").onclick = () => vote("2");
 
+
   loadMarket();
+
 
   supabase
     .channel("public:market_state")
@@ -419,6 +412,7 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
     .subscribe();
 })();
 </script>
+
 
 
 </body>
