--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js
   const VOTE_KEY = "revelabet_voted_1x2";
   const SUPABASE_URL = "https://menjfaztfkabogifyhua.supabase.co";
   const SUPABASE_ANON_KEY =
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1lbmpmYXp0ZmthYm9naWZ5aHVhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkxOTI2NzgsImV4cCI6MjA4NDc2ODY3OH0.SHfs6NnIiNOVCBeXyxcN-tO9hfUCvuY68H_vKwuW7tQ";
+    "sb_publishable_W-2790dCEiXvBZBc1LvXdQ_4jfJXWi4";
 
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
