--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
       <div class="topbar">
         <div class="brand">
-          <img src="logo.png" alt="RevelaBet logo" />
+          <img src="https://github.com/user-attachments/assets/72931458-cb32-4638-a650-a2acb53fa850" alt="RevelaBet logo" />
           <div class="txt">
             <div class="t">RevelaBet • Bilhete</div>
             <div class="s">Mercado 1X2 • Odds ao vivo</div>
