--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
       <div class="topbar">
         <div class="brand">
-          <img src="https://github.com/user-attachments/assets/72931458-cb32-4638-a650-a2acb53fa850" alt="RevelaBet logo" />
+          <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/99137194/540158993-72931458-cb32-4638-a650-a2acb53fa850.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20260124%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20260124T195450Z&X-Amz-Expires=300&X-Amz-Signature=9ea0526c481dbcef79ceabda61e1919247a34f0dee07f6ae817dbf9663a86f65&X-Amz-SignedHeaders=host" alt="RevelaBet logo" />
           <div class="txt">
             <div class="t">RevelaBet • Bilhete</div>
             <div class="s">Mercado 1X2 • Odds ao vivo</div>
