--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div class="status"><span class="dot" id="sDot"></span><span id="statusTxt">Carregando…</span></div>
       </div>
 
-      <div class="footer">
+      <div class="footer" style="display:none;>
         <div class="ctrlRow">
           <div class="ctrl">
             <div style="font-size:11px;color:rgba(255,255,255,.55);margin:0 0 6px;">Juice (%)</div>
