--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           </div>
         </div>
 
-        <div class="controls">
+        <div class="controls" style="display:none;>
           <button class="ghost" id="apply">Aplicar config</button>
           <button class="ghost" id="toggleAdmin">Fechar/Abrir (admin)</button>
           <button class="ghost" id="resetAdmin">Zerar (admin)</button>
