--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           <button class="ghost" id="resetAdmin">Zerar (admin)</button>
         </div>
 
-        <div class="status" id="hint">Admin key padrão: 1234 (mude com ADMIN_KEY)</div>
+        <div class="status" id="hint" style="display:none;>Admin key padrão: 1234 (mude com ADMIN_KEY)</div>
       </div>
 
     </div>
