--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div class="status"><span class="dot" id="sDot"></span><span id="statusTxt">Carregando…</span></div>
       </div>
 
-      <div class="footer">
+      <div class="footer" style="display: none;">
         <div class="ctrlRow">
           <div class="ctrl">
             <div style="font-size:11px;color:rgba(255,255,255,.55);margin:0 0 6px;">Juice (%)</div>
@@ -284,13 +284,13 @@
           </div>
         </div>
 
-        <div class="controls">
+        <div class="controls" style="display: none;">
           <button class="ghost" id="apply">Aplicar config</button>
           <button class="ghost" id="toggleAdmin">Fechar/Abrir (admin)</button>
           <button class="ghost" id="resetAdmin">Zerar (admin)</button>
         </div>
 
-        <div class="status" id="hint">Admin key padrão: 1234 (mude com ADMIN_KEY)</div>
+        <div class="status" id="hint" style="display: none;">Admin key padrão: 1234 (mude com ADMIN_KEY)</div>
       </div>
 
     </div>
