--- a/index.html
+++ b/index.html
@@ -288,6 +288,13 @@
           <div class="m">
             <div class="k">MERCADO</div>
             <div class="v">Resultado Final </div>
+            <div class="m" style="display: none;">
+            <div class="k">JUICE (margem)</div>
+            <div class="v"><span id="juiceTxt">30</span>% • Overround <span id="ovrTxt">1.30</span></div>
+          </div>
+          <div class="m" style="display: none;">
+            <div class="k">SOMA PROB. IMPLÍCITAS</div>
+            <div class="v"><span id="sumProb">1.30</span></div>
           </div>
         </div>
 
@@ -345,6 +352,27 @@
 
         <div class="status"><span class="dot" id="sDot"></span><span id="statusTxt">Carregando…</span></div>
       </div>
+        <div class="footer" style="display: none;">
+        <div class="ctrlRow">
+          <div class="ctrl">
+            <div style="font-size:11px;color:rgba(255,255,255,.55);margin:0 0 6px;">Juice (%)</div>
+            <input id="juice" type="number" step="1" value="30">
+          </div>
+          <div class="ctrl">
+            <div style="font-size:11px;color:rgba(255,255,255,.55);margin:0 0 6px;">Prior (estabilidade)</div>
+            <input id="prior" type="number" step="1" value="6">
+          </div>
+        </div>
+
+        <div class="controls" style="display: none;">
+          <button class="ghost" id="apply">Aplicar config</button>
+          <button class="ghost" id="toggleAdmin">Fechar/Abrir (admin)</button>
+          <button class="ghost" id="resetAdmin">Zerar (admin)</button>
+        </div>
+
+        <div class="status" id="hint" style="display: none;">Admin key padrão: 1234 (mude com ADMIN_KEY)</div>
+      </div>
+
 
     </div>
   </div>
