--- a/index.html
+++ b/index.html
@@ -4,266 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>RevelaBet • Bilhete 1X2</title>
-  <style>
-    :root{
-      --bg:#0b0f17;
-      --card:#111827;
-      --line: rgba(255,255,255,.08);
-      --text: rgba(255,255,255,.92);
-      --muted: rgba(255,255,255,.68);
-      --muted2: rgba(255,255,255,.55);
-      --good: rgba(34,197,94,.95);
-      --warn: rgba(245,158,11,.95);
-    }
-    *{ box-sizing:border-box; }
-    body{
-      margin:0; padding:18px;
-      font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial;
-      background: radial-gradient(1200px 800px at 20% 10%, rgba(59,130,246,.18), transparent 60%),
-                  radial-gradient(900px 600px at 80% 20%, rgba(236,72,153,.16), transparent 55%),
-                  var(--bg);
-      color: var(--text);
-    }
-    .wrap{ max-width: 600px; margin: 0 auto; }
-    .ticket{
-      border: 1px solid var(--line);
-      border-radius: 18px;
-      overflow: hidden;
-      background: linear-gradient(180deg, rgba(255,255,255,.04), transparent 40%), var(--card);
-      box-shadow: 0 18px 50px rgba(0,0,0,.35);
-    }
-    .topbar{
-      padding: 12px 14px;
-      display:flex; justify-content: space-between; align-items: center;
-      background: linear-gradient(90deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
-      border-bottom: 1px solid var(--line);
-      gap: 12px;
-    }
-    .brand{
-      display:flex; align-items:center; gap:10px; min-width: 0;
-      font-weight: 900;
-    }
-    .brand img{
-      height: 34px; width:auto;
-      border-radius: 10px;
-      border: 1px solid var(--line);
-      background: rgba(255,255,255,.03);
-    }
-    .brand .txt{ display:flex; flex-direction:column; min-width:0; }
-    .brand .txt .t{ font-size: 14px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-    .brand .txt .s{ font-size: 11px; color: var(--muted2); margin-top:2px; }
 
-    .pill{
-      font-size: 12px;
-      padding: 6px 10px;
-      border-radius: 999px;
-      border: 1px solid var(--line);
-      color: var(--muted);
-      display:flex; gap:8px; align-items: center;
-      background: rgba(255,255,255,.03);
-      white-space: nowrap;
-    }
-    .dot{ width:8px; height:8px; border-radius:50%; background: var(--warn); box-shadow: 0 0 0 3px rgba(245,158,11,.12); }
-
-    .body{ padding: 14px; }
-    .meta{
-      display:grid; grid-template-columns: 1fr 1fr; gap:10px;
-      margin-bottom: 12px;
-    }
-    .m{
-      padding:10px 12px;
-      border: 1px solid var(--line);
-      border-radius: 14px;
-      background: rgba(255,255,255,.03);
-    }
-    .m .k{ font-size: 11px; color: var(--muted2); margin-bottom: 6px; }
-    .m .v{ font-size: 13px; font-weight: 750; line-height: 1.25; }
-
-    .divider{ height: 1px; background: var(--line); margin: 12px 0; }
-
-    .row{
-      border: 1px solid var(--line);
-      border-radius: 14px;
-      overflow: hidden;
-      background: rgba(255,255,255,.02);
-      margin-bottom: 10px;
-    }
-    .sel{
-      display:flex; align-items:center; justify-content: space-between;
-      gap: 12px; padding: 12px;
-      border-bottom: 1px solid var(--line);
-    }
-    .sel:last-child{ border-bottom:0; }
-    .left{ display:flex; align-items:center; gap:10px; min-width:0; }
-    .badge{
-      width: 34px; height: 34px;
-      border-radius: 12px;
-      display:flex; align-items:center; justify-content:center;
-      font-weight: 900;
-      border: 1px solid var(--line);
-      background: rgba(255,255,255,.03);
-      flex: 0 0 auto;
-    }
-    .name{ display:flex; flex-direction:column; min-width:0; }
-    .name .main{ font-weight: 850; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-    .name .sub{ font-size: 12px; color: var(--muted2); margin-top:2px; }
-    .right{ display:flex; align-items:center; gap:10px; flex:0 0 auto; }
-    .odd{
-      font-weight: 950; font-size: 18px;
-      padding: 8px 10px;
-      border-radius: 12px;
-      border: 1px solid var(--line);
-      background: rgba(255,255,255,.03);
-      min-width: 74px;
-      text-align:center;
-    }
-    .votes{
-      font-size: 12px; color: var(--muted);
-      padding: 6px 10px;
-      border-radius: 999px;
-      border: 1px solid var(--line);
-      background: rgba(255,255,255,.02);
-      min-width: 92px;
-      text-align:center;
-    }
-
-    .buttons{
-      display:grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      gap:10px;
-      margin-top: 10px;
-    }
-    button{
-      border: 0;
-      border-radius: 14px;
-      padding: 12px 10px;
-      font-weight: 900;
-      cursor:pointer;
-      color: rgba(0,0,0,.88);
-    }
-    button:disabled{ opacity:.55; cursor:not-allowed; }
-    .b1{ background: rgba(59,130,246,.95); }
-    .bx{ background: rgba(148,163,184,.95); }
-    .b2{ background: rgba(236,72,153,.95); }
-
-    .footer{
-      padding: 12px 14px 14px;
-      border-top: 1px dashed rgba(255,255,255,.14);
-      background: linear-gradient(180deg, rgba(0,0,0,.18), transparent);
-    }
-
-    .controls{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
-    .ghost{
-      background: rgba(255,255,255,.08);
-      color: var(--text);
-      border: 1px solid var(--line);
-      padding: 10px 12px;
-      border-radius: 12px;
-      font-weight: 850;
-      cursor:pointer;
-    }
-    .ctrlRow{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
-    .ctrl{ flex:1 1 160px; }
-    input{
-      width:100%;
-      padding:10px 12px;
-      border-radius: 12px;
-      border: 1px solid var(--line);
-      background: rgba(255,255,255,.03);
-      color: var(--text);
-      outline:none;
-    }
-    .status{
-      margin-top: 10px;
-      font-size: 12px;
-      color: var(--muted);
-      display:flex; gap:8px; align-items:center;
-      line-height:1.25;
-    }
-        @media (max-width: 480px) {
-
-  body {
-    padding: 12px;
-  }
-
-  .wrap {
-    max-width: 100%;
-  }
-
-  .topbar {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-  }
-
-  .pill {
-    align-self: flex-end;
-    font-size: 11px;
-    padding: 5px 8px;
-  }
-
-  .brand img {
-    height: 28px;
-  }
-
-  .brand .txt .t {
-    font-size: 13px;
-  }
-
-  .brand .txt .s {
-    font-size: 10px;
-  }
-
-  .meta {
-    grid-template-columns: 1fr;
-  }
-
-  .m {
-    padding: 10px;
-  }
-
-  .row {
-    margin-bottom: 12px;
-  }
-
-  .sel {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-  }
-
-  .right {
-    width: 100%;
-    justify-content: space-between;
-  }
-
-  .odd {
-    font-size: 16px;
-    min-width: 64px;
-    padding: 6px 8px;
-  }
-
-  .votes {
-    font-size: 11px;
-    min-width: auto;
-    padding: 6px 8px;
-  }
-
-  .buttons {
-    grid-template-columns: 1fr;
-    gap: 8px;
-  }
-
-  button {
-    padding: 14px;
-    font-size: 14px;
-  }
-
-  .status {
-    font-size: 11px;
-  }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <div class="wrap">
     <div class="ticket">
@@ -276,10 +20,14 @@
             <div class="s">Mercado 1X2 • Odds ao vivo</div>
           </div>
         </div>
-        <div class="pill"><span class="dot" id="dot"></span><span id="liveTxt">CONECTANDO…</span></div>
+        <div class="pill">
+          <span class="dot" id="dot"></span>
+          <span id="liveTxt">CONECTANDO…</span>
+        </div>
       </div>
 
       <div class="body">
+
         <div class="meta">
           <div class="m">
             <div class="k">EVENTO</div>
@@ -289,19 +37,12 @@
             <div class="k">MERCADO</div>
             <div class="v">Resultado Final (1X2)</div>
           </div>
-          <div class="m" style="display: none;">
-            <div class="k">JUICE (margem)</div>
-            <div class="v"><span id="juiceTxt">30</span>% • Overround <span id="ovrTxt">1.30</span></div>
-          </div>
-          <div class="m" style="display: none;">
-            <div class="k">SOMA PROB. IMPLÍCITAS</div>
-            <div class="v"><span id="sumProb">1.30</span></div>
-          </div>
         </div>
 
         <div class="divider"></div>
 
         <div class="row">
+
           <div class="sel">
             <div class="left">
               <div class="badge">1</div>
@@ -321,7 +62,7 @@
               <div class="badge">X</div>
               <div class="name">
                 <div class="main">Empate 😶</div>
-                <div class="sub">Equilíbrio total / “não sei”</div>
+                <div class="sub">Equilíbrio total</div>
               </div>
             </div>
             <div class="right">
@@ -343,6 +84,7 @@
               <div class="odd">@ <span id="o2">2.50</span></div>
             </div>
           </div>
+
         </div>
 
         <div class="buttons">
@@ -351,170 +93,15 @@
           <button class="b2" id="bet2">APOSTAR 2</button>
         </div>
 
-        <div class="status"><span class="dot" id="sDot"></span><span id="statusTxt">Carregando…</span></div>
-      </div>
-
-      <div class="footer" style="display: none;">
-        <div class="ctrlRow">
-          <div class="ctrl">
-            <div style="font-size:11px;color:rgba(255,255,255,.55);margin:0 0 6px;">Juice (%)</div>
-            <input id="juice" type="number" step="1" value="30">
-          </div>
-          <div class="ctrl">
-            <div style="font-size:11px;color:rgba(255,255,255,.55);margin:0 0 6px;">Prior (estabilidade)</div>
-            <input id="prior" type="number" step="1" value="6">
-          </div>
+        <div class="status">
+          <span class="dot" id="sDot"></span>
+          <span id="statusTxt">Carregando…</span>
         </div>
 
-        <div class="controls" style="display: none;">
-          <button class="ghost" id="apply">Aplicar config</button>
-          <button class="ghost" id="toggleAdmin">Fechar/Abrir (admin)</button>
-          <button class="ghost" id="resetAdmin">Zerar (admin)</button>
-        </div>
-
-        <div class="status" id="hint" style="display: none;">Admin key padrão: 1234 (mude com ADMIN_KEY)</div>
       </div>
-
     </div>
   </div>
 
-<script type="module">
-import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
-
-(() => {
-  const $ = (id) => document.getElementById(id);
-
-  const SUPABASE_URL = "https://menjfaztfkabogifyhua.supabase.co";
-  const SUPABASE_PUBLISHABLE_KEY =
-    "sb_publishable_W-2790dCEiXvBZBc1LvXdQ_4jfJXWi4";
-
-  const supabase = createClient(
-    SUPABASE_URL,
-    SUPABASE_PUBLISHABLE_KEY
-  );
-
-
-  const params = new URLSearchParams(window.location.search);
-  const token = params.get("token");
-
-  let marketOpen = true;
-
-  function setLive(text, open) {
-    $("liveTxt").textContent = text;
-    const color = open ? "rgba(34,197,94,.95)" : "rgba(245,158,11,.95)";
-    const glow  = open ? "rgba(34,197,94,.12)" : "rgba(245,158,11,.12)";
-    ["dot", "sDot"].forEach(id => {
-      $(id).style.background = color;
-      $(id).style.boxShadow = `0 0 0 3px ${glow}`;
-    });
-  }
-
-  function render(state) {
-    if (!state) return;
-
-    marketOpen = state.marketOpen;
-
-
-    $("v1").textContent = state.menino;
-    $("vx").textContent = state.empate;
-    $("v2").textContent = state.menina;
-
-    
-    $("o1").textContent = Number(state.o1).toFixed(2);
-    $("ox").textContent = Number(state.ox).toFixed(2);
-    $("o2").textContent = Number(state.o2).toFixed(2);
-
-    
-    $("juiceTxt").textContent = state.juice;
-    $("ovrTxt").textContent   = Number(state.overround).toFixed(2);
-    $("sumProb").textContent  = Number(state.sumProb).toFixed(2);
-
-    const canVote = marketOpen && !!token;
-
-    ["bet1", "betx", "bet2"].forEach(id => {
-      $(id).disabled = !canVote;
-    });
-
-    if (!token) {
-      setLive("TOKEN INVÁLIDO", false);
-      $("statusTxt").textContent = "❌ Acesse usando um QR Code válido.";
-    } else if (!marketOpen) {
-      setLive("MERCADO FECHADO", false);
-      $("statusTxt").textContent = "Mercado encerrado.";
-    } else {
-      setLive("AO VIVO", true);
-      $("statusTxt").textContent = "🟢 Token válido. Faça seu voto.";
-    }
-  }
-
-  async function loadMarket() {
-    try {
-      const { data, error } = await supabase
-        .from("market_state")
-        .select("*")
-        .eq("id", 1)
-        .single();
-
-      if (error) throw error;
-      render(data);
-    } catch (err) {
-      console.error("Load error:", err);
-      setLive("OFFLINE", false);
-      $("statusTxt").textContent = "🔴 Backend offline.";
-    }
-  }
-
-  async function vote(pick) {
-    if (!token) return;
-
-    try {
-      const { error } = await supabase.functions.invoke(
-        "super-processor",
-        {
-          body: {
-            pick,
-            token, 
-          },
-        }
-      );
-
-      if (error) throw error;
-
-      $("statusTxt").textContent = "✅ Voto registrado. Obrigado!";
-      ["bet1", "betx", "bet2"].forEach(id => $(id).disabled = true);
-    } catch (err) {
-      console.error("Vote error:", err);
-      $("statusTxt").textContent = "❌ Este token já foi usado.";
-      ["bet1", "betx", "bet2"].forEach(id => $(id).disabled = true);
-    }
-  }
-
-  $("bet1").onclick = () => vote("1");
-  $("betx").onclick = () => vote("x");
-  $("bet2").onclick = () => vote("2");
-
-  loadMarket();
-
-  
-  supabase
-    .channel("market_state_live")
-    .on(
-      "postgres_changes",
-      {
-        event: "UPDATE",
-        schema: "public",
-        table: "market_state",
-        filter: "id=eq.1",
-      },
-      (payload) => {
-        render(payload.new);
-      }
-    )
-    .subscribe();
-})();
-</script>
-  
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
-
-
