--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <div class="topbar">
         <div class="brand">
-          <img src="https://i.imgur.com/mTT0csQ.jpeg" alt="RevelaBet logo" />
+          <img src="content.png" alt="RevelaBet logo" />
           <div class="txt">
             <div class="t">RevelaBet • Bilhete</div>
             <div class="s">Mercado 1X2 • Odds ao vivo</div>
