--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             <div class="v">Revelação do Bebê</div>
           </div>
           <div class="m">
-            <div class="k">MERCADO</div>
-            <div class="v">Resultado Final (1X2)</div>
+            <div class="k">Resultado em:</div>
+            <div id="contador"></div>
+            <div id="mensagem" style="display:none"></div>
           </div>
         </div>
 
