--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="v">Revelação do Bebê</div>
           </div>
           <div class="m">
-            <div class="k">Resultado em:</div>
+            <div class="k">Resultado</div>
             <div id="contador"></div>
             <div id="mensagem" style="display:none"></div>
           </div>
